Update homepage, whats new, get started

--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -6,75 +6,80 @@ permalink: "get-started.html"
 ---
 
 <div class="row">
- <div class="col-md-3">
-  <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
-   <ul class="list-navigation">
-    <li><a href="/template-updates.html" class="active" id="page-navigation-label">Get started</a>
-     <ul>
-      <li><a href="/whats-new.html">What's new in V6</a></li>
-      <li><a href="/download-and-setup.html">Download and setup</a></li>
-      <li><a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a></li>
-     </ul>
-    </li>
-   </ul>
-  </nav>
- </div>
-
-
- <div class="col-md-9 p-b-lg">
-  <h1 class="mt-lg-0">Get started</h1>
-
-  <p class="lead">The State Web Template makes it easier to build digital services to meet the needs of Californians.
-  </p>
-  <p>It offers components and templates to help product teams work more efficiently. Each component and template comes
-   with code to make it easy for you to use them in your project.</p>
-
-  <div class="row">
-   <div class="col-md-4 m-t-md">
-    <a href="/whats-new.html"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="What's new in V6 card">
-     <div class="p-a-md d-flex align-content-center">
-      <img src="/images/components/icon-v6.jpg" alt="State template version 6 icon" class="img-fluid">
-     </div>
-     <div class="p-a">
-      <h3 class="h5 m-t-0">What's new in V6</h3>
-      <p class="font-size-16 color-black">Learn what makes this template different from the last one.
-      </p>
-     </div>
-    </a>
-   </div>
-   <div class="col-md-4 m-t-md">
-    <a href="/download-and-setup.html"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="Download and setup card">
-     <div class="p-a-md d-flex align-content-center">
-      <img src="/images/components/icon-download.jpg" alt="Download and setup icon" class="img-fluid">
-     </div>
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Download and setup</h3>
-      <p class="font-size-16 color-black">Understand what comes with the template and steps on how to implement it.
-      </p>
-     </div>
-    </a>
-   </div>
-   <div class="col-md-4 m-t-md">
-    <a href="/get-started/css-classes-shortcuts/"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="CSS classes shortcuts card">
-     <div class="p-a-md d-flex align-content-center">
-      <img src="/images/components/icon-css-utility.jpg" alt="CSS classes shortcuts icon" class="img-fluid">
-     </div>
-     <div class="p-a">
-      <h3 class="h5 m-t-0">CSS classes shortcuts</h3>
-      <p class="font-size-16 color-black">Easily access commonly used CSS classes.
-      </p>
-     </div>
-    </a>
-   </div>
-
+  <div class="col-md-3">
+    <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
+      <ul class="list-navigation">
+        <li>
+          <a href="/template-updates.html" class="active" id="page-navigation-label">Get started</a>
+          <ul>
+            <li>
+              <a href="/whats-new.html">What's new in V6</a>
+            </li>
+            <li>
+              <a href="/download-and-setup.html">Download and setup</a>
+            </li>
+            <li>
+              <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
   </div>
 
+  <div class="col-md-9 p-b-lg">
+    <h1 class="mt-lg-0">Get started</h1>
 
- </div>
+    <p class="lead">The State Web Template makes it easier to build digital services to meet the needs of Californians.
+  </p>
+    <p>It offers components and templates to help product teams work more efficiently. Each component and template comes
+   with code to make it easy for you to use them in your project.</p>
+
+    <div class="row">
+      <div class="col-md-4 m-t-md">
+        <a href="/whats-new.html"
+     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+     title="What's new in V6 card">
+          <div class="p-a-md d-flex align-content-center">
+            <img src="/images/components/icon-v6.jpg" alt="State template version 6 icon" class="img-fluid">
+          </div>
+          <div class="p-a">
+            <h2 class="h5 m-t-0">What's new in V6</h2>
+            <p class="font-size-16 color-black">Learn what makes this template different from the last one.
+      </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 m-t-md">
+        <a href="/download-and-setup.html"
+     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+     title="Download and setup card">
+          <div class="p-a-md d-flex align-content-center">
+            <img src="/images/components/icon-download.jpg" alt="Download and setup icon" class="img-fluid">
+          </div>
+          <div class="p-a">
+            <h2 class="h5 m-t-0">Download and setup</h2>
+            <p class="font-size-16 color-black">Understand what comes with the template and steps on how to implement it.
+      </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 m-t-md">
+        <a href="/get-started/css-classes-shortcuts/"
+     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+     title="CSS classes shortcuts card">
+          <div class="p-a-md d-flex align-content-center">
+            <img src="/images/components/icon-css-utility.jpg" alt="CSS classes shortcuts icon" class="img-fluid">
+          </div>
+          <div class="p-a">
+            <h2 class="h5 m-t-0">CSS classes shortcuts</h2>
+            <p class="font-size-16 color-black">Easily access commonly used CSS classes.
+      </p>
+          </div>
+        </a>
+      </div>
+
+    </div>
+
+  </div>
 </div>
