--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -1,5 +1,5 @@
 ---
-title: What's new
+title: What's new in V6
 landing: Template updates
 layout: page.njk
 permalink: "whats-new.html"
@@ -11,7 +11,7 @@ permalink: "whats-new.html"
  <div class="col-md-3">
   <nav aria-labelledby="page-navigation-label" class="side-navigation sticky-6 overflow-auto">
    <ul class="list-navigation">
-    <li><a href="/template-updates.html" class="active" id="page-navigation-label">What's new</a>
+    <li><a href="/template-updates.html" class="active" id="page-navigation-label">What's new in V6</a>
      <ul>
       <li><a href="#Patterns">Patterns</a></li>
       <li><a href="#Code">Code</a></li>
@@ -27,7 +27,7 @@ permalink: "whats-new.html"
  </div>
  <div class="col-md-9 p-b-lg">
 
-  <h1 class="mt-lg-0">What's new</h1>
+  <h1 class="mt-lg-0">What's new in V6</h1>
   <p class="lead">Version 6 of the State Web Template has a new look and feel. With improvements that align with the
    <a href="https://designsystem.webstandards.ca.gov/">California Design System</a>, V6 sets a modern digital standard.
   </p>
@@ -68,13 +68,12 @@ permalink: "whats-new.html"
   </ul>
 
   <h2 id="Components">Components</h2>
-  <p>We improved the overall design and functionality of all our components.
-   Components in the V6 release:</p>
+  <p>We improved the overall design and functionality of all our components.</p>
+  <p>Components in the V6 release:</p>
   <ul>
    <li>Are consolidated by functionality.</li>
    <li>Enhance the structural components and patterns.</li>
    <li>Improve blockquote, tabs, and accordion components.</li>
-   <li>Feature a new <a href="/components.html"></a>list component.</li>
   </ul>
 
   <h2 id="User-experience">User experience</h2>
