--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -178,7 +178,7 @@ alert: "../modules/alert-banner.html"
 
 
 
-<h2 id="usage">Usage</h2>
+<h2 id="Usage">Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use the alert sparingly. They alarm people and distract from other content.</p>
 <p>Be concise with your alert content. Use a link to send people to a page with the details.</p>
