Updates to contact-us, conditions of use, privacy policy, about, template updates

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,62 +5,70 @@ permalink: "about.html"
 ---
 
 <div class="row">
- <div class="col-md-3" role="complementary">
-  <!-- Side navigation -->
-  <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
-   <ul class="list-navigation">
-    <li><a href="/about.html" id="navigation-list" class="active">About</a>
-     <ul>
-      <li><a href="#Our-mission">Our mission</a></li>
-      <li><a href="#Our-vision">Our vision</a></li>
-      <li><a href="#History">History</a></li>
-      <li><a href="#Looking-ahead">Looking ahead </a></li>
-     </ul>
-    </li>
-   </ul>
-  </nav>
- </div>
+  <div class="col-md-3" role="complementary">
+    <!-- Side navigation -->
+    <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
+      <ul class="list-navigation">
+        <li>
+          <a href="/about.html" id="navigation-list" class="active">About</a>
+          <ul>
+            <li>
+              <a href="#Our-mission">Our mission</a>
+            </li>
+            <li>
+              <a href="#Our-vision">Our vision</a>
+            </li>
+            <li>
+              <a href="#History">History</a>
+            </li>
+            <li>
+              <a href="#Looking-ahead">Looking ahead </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
- <article class="col-md-9 m-b-lg">
-  <h1 class="mt-lg-0">About the State Web Template</h1>
-  <p class="lead">Digitally connecting Californians to the government services they need has become increasingly more
+  <article class="col-md-9 m-b-lg">
+    <h1 class="mt-lg-0">About the State Web Template</h1>
+    <p class="lead" style="font-size:1.5rem;font-weight:400;line-height:2.5rem">Digitally connecting Californians to the government services they need has become increasingly more
    critical. Great design is central to succeeding in that effort. We offer this web template to help make digital
    information and services easier to use. </p>
-  <p>The State Web Template is an open source web template maintained by the Office of Digital Services within the
+    <p>The State Web Template is an open source web template maintained by the Office of Digital Services within the
    Department of Technology. Our components are designed to enhance the user experience and help digital teams create
    attractive, consistent, and accessible digital products. The State Web Template will always be open source,
    collaborative and evolving. </p>
 
-  <h2 id="Our-mission">Our mission</h2>
-  <p>Enhance the delivery of digital services for California residents through user experience design. </p>
+    <h2 id="Our-mission">Our mission</h2>
+    <p>Enhance the delivery of digital services for California residents through user experience design. </p>
 
-  <h2 id="Our-vision">Our vision</h2>
-  <p>Create excellent digital state services for California residents that are inclusive, accessible and performant.</p>
+    <h2 id="Our-vision">Our vision</h2>
+    <p>Create excellent digital state services for California residents that are inclusive, accessible and performant.</p>
 
-  <h2 id="History">History</h2>
-  <p>A long time ago, the eServices Office was established to lead statewide initiatives providing leadership in
+    <h2 id="History">History</h2>
+    <p>A long time ago, the eServices Office was established to lead statewide initiatives providing leadership in
    statewide web policy, CA.gov portal and the digital government footprint. We have come a long way but our core vision
    and mission has not changed.</p>
-  <p>The creation of a statewide web template was a strategy and framework to align on California's digital touchpoint.
+    <p>The creation of a statewide web template was a strategy and framework to align on California's digital touchpoint.
    The state web template has evolved from a technical toolset to a digital standard and tactical playbook on delivering
    useful, accessible, and performant user experiences.</p>
 
-  <h2 id="Looking-ahead ">Looking ahead</h2>
-  <p>Over the years, and with each state web template release, we've improved the access of online government services
+    <h2 id="Looking-ahead ">Looking ahead</h2>
+    <p>Over the years, and with each state web template release, we've improved the access of online government services
    with:</p>
-  <ul>
-   <li>Updated best practices</li>
-   <li>Responsive design elements</li>
-   <li>Web accessibility</li>
-   <li>Improved performance</li>
-  </ul>
-  <p>Version 6 of the State Web Template gets us one step closer to a production version of the <a
+    <ul>
+      <li>Updated best practices</li>
+      <li>Responsive design elements</li>
+      <li>Web accessibility</li>
+      <li>Improved performance</li>
+    </ul>
+    <p>Version 6 of the State Web Template gets us one step closer to a production version of the <a
     href="https://designsystem.webstandards.ca.gov/">California
     Design
     System</a>. We are excited to iterate on our digital toolset and evolve the state template to a design standard for
    california. We want to improve the digital experience of Californians and improve how we partner with State agencies.
   </p>
 
-
- </article>
+  </article>
 </div>
