--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -4,15 +4,16 @@ layout: page.njk
 permalink: "contact-us.html"
 ---
 
-
-
 <h1 class="mt-lg-0">Contact us</h1>
-<p>Please create a Contact Page specific to your own website. You may want to provide several methods of
+<p>Please create a contact page specific to your own website. You may want to provide several methods of
  contacting your organization. </p>
-<p>To provide state template v5.6 feedback use GitHub otherwise feel free to contact us by visiting <a
-  href="https://webstandards.ca.gov/contact-us/">Leave Feedback page</a>.</p>
+<p>To provide State Web Template V6 feedback, visit our <a
+  href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website"> California State Web Template Website GitHub Repo.</a>.</p>
+
+<p>For general help, <a href="https://webstandards.ca.gov/contact-us/">submit this form</a>.</p>
+
 <p>
- Feel free to <a href="http://Info.Eservices@state.ca.gov/">Subscribe</a> to the Webmaster User Group
+ Feel free to <a href="http://Info.Eservices@state.ca.gov/">subscribe</a> to the Webmaster User Group
  for state template updates, group announcements and events. You can also visit the <a
   href="http://webstandards.ca.gov/">WebStandards</a> website for more information. To contact us
  about the state template please visit <a href="https://webstandards.ca.gov/contact-us/">Contact us
@@ -20,16 +21,11 @@ permalink: "contact-us.html"
 </p>
 <p>This website is managed by the California Department of Technology.</p>
 <article>
- <p>&nbsp;</p>
+  <p>&nbsp;</p>
 </article>
 </main>
 </div>
 </div>
-
-
-<!--#include virtual="/ssi/global-footer.html" -->
-<!--#include virtual="/ssi/scripts.html" -->
-
 </body>
 
 </html>
