--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -5,27 +5,34 @@ permalink: "contact-us.html"
 ---
 
 <h1 class="mt-lg-0">Contact us</h1>
-<p>Please create a contact page specific to your own website. You may want to provide several methods of
- contacting your organization. </p>
-<p>To provide State Web Template V6 feedback, visit our <a
-  href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website"> California State Web Template Website GitHub Repo.</a>.</p>
+<ul>
+  <li>
+    <p>
+      For general help,
+      <a href="https://webstandards.ca.gov/contact-us/">submit this form</a>
+      .
+    </p>
+  </li>
+  <li>
+    <p>
+      To provide State Web Template V6 feedback, visit our
+      <a
+        href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website"
+      >
+        California State Web Template GitHub Repo.
+      </a>
+      .
+    </p>
+  </li>
+  <li>
+    <p>
+      For state template updates, group announcements and events,
+      <a href="https://cdt.ca.gov/dwsn">subscribe</a>
+      to the Webmaster User Group, or visit the
+      <a href="http://webstandards.ca.gov/">WebStandards</a>
+      website for more information.
+    </p>
+  </li>
+</ul>
 
-<p>For general help, <a href="https://webstandards.ca.gov/contact-us/">submit this form</a>.</p>
-
-<p>
- Feel free to <a href="http://Info.Eservices@state.ca.gov/">subscribe</a> to the Webmaster User Group
- for state template updates, group announcements and events. You can also visit the <a
-  href="http://webstandards.ca.gov/">WebStandards</a> website for more information. To contact us
- about the state template please visit <a href="https://webstandards.ca.gov/contact-us/">Contact us
-  page</a>.<br>
-</p>
 <p>This website is managed by the California Department of Technology.</p>
-<article>
-  <p>&nbsp;</p>
-</article>
-</main>
-</div>
-</div>
-</body>
-
-</html>
