--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -78,7 +78,7 @@ permalink: "visual-design/typography.html"
         </tr>
         <tr>
           <td>Small-text paragraph</td>
-          <td class="small">Use for ??? form field formatting tips and error messages?</td>
+          <td class="small">Use for tooltips and footnotes.</td>
           <td>Class: .small<br>
             Code: font-size: calc(1rem + 0.1vw);</td>
         </tr>
