--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -19,7 +19,7 @@ permalink: "contact-us.html"
       <a
         href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website"
       >
-        California State Web Template GitHub Repo.
+        California State Web Template GitHub Repo
       </a>
       .
     </p>
