--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -20,7 +20,7 @@ permalink: "sitemap.html"
             <a href="/whats-new.html">What's new</a>
           </li>
           <li class="m-t-sm">
-            <a href="/structure/download-and-setup.html">Download and setup</a>
+            <a href="/download-and-setup.html">Download and setup</a>
           </li>
           <li class="m-t-sm">
             <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
