fixes for Christina

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -65,7 +65,7 @@ permalink: "download-and-setup.html"
                                 Repository</a></li>
                         <li><a
                                 href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/releases">Latest
-                                template relases for download</a></li>
+                                template releases for download</a></li>
                     </ul>
                 </div>
                 <div class="brd-solid-1 brd-gray-light bg-white p-3">
