Fixed accordion page URL

--- a/pages/components.html
+++ b/pages/components.html
@@ -23,7 +23,7 @@ permalink: "components.html"
 
 <div class="row">
  <div class="col-md-4 m-t-md">
-  <a href="/components/accordions.html"
+  <a href="/components/accordion.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Accordion component example">
    <div class="p-a-md d-flex align-content-center">
