--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -13,34 +13,34 @@ permalink: "sitemap.html"
     <a class="d-block m-y" href="/">Web Template homepage</a>
 
 
-        <a class="d-block m-y" href="/template-updates.html">Template updates</a>
-        <h2 class="h3">Get started</h2>
-        <a class="d-block m-y" href="/get-started.html">Get started</a>
-        <ul>
-          <li class="m-t-sm">
-            <a href="/whats-new.html">What's new</a>
-          </li>
-          <li class="m-t-sm">
-            <a href="/download-and-setup.html">Download and setup</a>
-          </li>
-          <li class="m-t-sm">
-            <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
-            <ul>
-              <li class="m-t-sm">
-                <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a>
-              </li>
-              <li class="m-t-sm">
-                <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient Backgrounds</a>
-              </li>
-              <li class="m-t-sm">
-                <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
-              </li>
-              <li class="m-t-sm">
-                <a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+    <a class="d-block m-y" href="/template-updates.html">Template updates</a>
+    <h2 class="h3">Get started</h2>
+    <a class="d-block m-y" href="/get-started.html">Get started</a>
+    <ul>
+     <li class="m-t-sm">
+      <a href="/whats-new.html">What's new</a>
+     </li>
+     <li class="m-t-sm">
+      <a href="/download-and-setup.html">Download and setup</a>
+     </li>
+     <li class="m-t-sm">
+      <a href="/get-started/css-classes-shortcuts/">CSS classes shortcuts</a>
+      <ul>
+       <li class="m-t-sm">
+        <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a>
+       </li>
+       <li class="m-t-sm">
+        <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient Backgrounds</a>
+       </li>
+       <li class="m-t-sm">
+        <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
+       </li>
+       <li class="m-t-sm">
+        <a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a>
+       </li>
+      </ul>
+     </li>
+    </ul>
 
 
     <h2 class="h3">Structure</h2>
@@ -117,7 +117,7 @@ permalink: "sitemap.html"
     <a class="d-block m-y" href="/components.html">Components</a>
     <ul>
      <li class="m-t-sm">
-      <a href="/components/accordions.html">Accordion</a>
+      <a href="/components/accordion.html">Accordion</a>
      </li>
      <li class="m-t-sm">
       <a href="/components/alert.html">Alert</a>
