Fixed accordion page permalink

--- a/pages/sample/accordion.html
+++ b/pages/sample/accordion.html
@@ -2,8 +2,7 @@
 title: Accordion
 landing: Components
 layout: components.njk
-permalink: "/components/accordion
-.html"
+permalink: "/components/accordion.html"
 ---
 
 
