Updated whats new page #764

--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -44,7 +44,7 @@ permalink: "whats-new.html"
    <li>Using json files and eleventy logic to generate side navigation and breadcrumbs.</li>
    <li>Separating the sample website from the core code base allowing for a quick and easy start of a new web project.
    </li>
-   <li>Enabled site to render markdown files in html</li>
+   <li>Enabled sites to render markdown files in HTML.</li>
   </ul>
 
   <h2 id="Navigation">Navigation</h2>
@@ -82,8 +82,7 @@ permalink: "whats-new.html"
   <ul>
    <li>A dynamic icon search feature and enhanced icon navigation.</li>
    <li>A sticky side menu to simplify browsing and reduce scrolling.</li>
-   <li>Forms to request new components, patterns, and icons.</li>
-   <li>Collaboration channels so you can provide feedback, report bugs, and request a new component, pattern, or icon.
+   <li>Collaboration channels so you can provide feedback and report bugs.
    </li>
   </ul>
 
