fixed tabs accessibility

--- a/pages/components.html
+++ b/pages/components.html
@@ -87,7 +87,7 @@ permalink: "components.html"
  </div>
 
  <div class="col-md-4 m-t-md">
-  <a href="/components/buttons.html"
+  <a href="/components/button.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Buttons example">
    <div class="p-a-md d-flex align-content-center">
