--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -47,10 +47,10 @@ permalink: "components/countdown-timer.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -71,7 +71,8 @@ permalink: "components/countdown-timer.html"
      <h3 class="m-t-0">Default</h3>
      <div class="group countdown p-x">
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="weeks" aria-label="weeks" class="text-decoration-none">wks</abbr><br></span>
+       <span class="countdown-text"><abbr title="weeks" aria-label="weeks"
+         class="text-decoration-none">wks</abbr><br></span>
        <span id="weeks1"></span>
       </div>
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
@@ -79,15 +80,18 @@ permalink: "components/countdown-timer.html"
        <span id="days1"></span>
       </div>
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="hours" aria-label="hours" class="text-decoration-none">hrs</abbr> <br></span>
+       <span class="countdown-text"><abbr title="hours" aria-label="hours" class="text-decoration-none">hrs</abbr>
+        <br></span>
        <span id="hours1"></span>
       </div>
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="minutes" aria-label="minutes" class="text-decoration-none">mins</abbr><br></span>
+       <span class="countdown-text"><abbr title="minutes" aria-label="minutes"
+         class="text-decoration-none">mins</abbr><br></span>
        <span id="minutes1"></span>
       </div>
       <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="seconds" aria-label="seconds" class="text-decoration-none">secs</abbr><br></span>
+       <span class="countdown-text"><abbr title="seconds" aria-label="seconds"
+         class="text-decoration-none">secs</abbr><br></span>
        <span id="seconds1"></span>
       </div>
      </div>
@@ -96,7 +100,8 @@ permalink: "components/countdown-timer.html"
      <h3>Primary</h3>
      <div class="group countdown p-x">
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="weeks" aria-label="weeks" class="text-decoration-none">wks</abbr><br></span>
+       <span class="countdown-text"><abbr title="weeks" aria-label="weeks"
+         class="text-decoration-none">wks</abbr><br></span>
        <span id="weeks"></span>
       </div>
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
@@ -104,15 +109,18 @@ permalink: "components/countdown-timer.html"
        <span id="days"></span>
       </div>
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="hours" aria-label="hours" class="text-decoration-none">hrs</abbr><br></span>
+       <span class="countdown-text"><abbr title="hours" aria-label="hours"
+         class="text-decoration-none">hrs</abbr><br></span>
        <span id="hours"></span>
       </div>
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="minutes" aria-label="minutes" class="text-decoration-none">mins</abbr><br></span>
+       <span class="countdown-text"><abbr title="minutes" aria-label="minutes"
+         class="text-decoration-none">mins</abbr><br></span>
        <span id="minutes"></span>
       </div>
       <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-       <span class="countdown-text"><abbr title="seconds" aria-label="seconds" class="text-decoration-none">secs</abbr><br></span>
+       <span class="countdown-text"><abbr title="seconds" aria-label="seconds"
+         class="text-decoration-none">secs</abbr><br></span>
        <span id="seconds"></span>
       </div>
      </div>
