--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -37,10 +37,10 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
   <!--TABS-->
   <div class="tab-group responsive">
    <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
 
@@ -96,10 +96,10 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
   <!--TABS-->
   <div class="tab-group responsive">
    <ul id="tabs4" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" role="presentation">
      <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
     </li>
 
