--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -57,10 +57,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs7" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example7" href="#pane-example7" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html7" href="#pane-html7" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -127,10 +127,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs2" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example2" href="#pane-example2" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html2" href="#pane-html2" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
  </ul>
@@ -213,10 +213,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -299,10 +299,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs3" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -364,10 +364,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs4" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example4" href="#pane-example4" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html4" href="#pane-html4" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -430,10 +430,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs5" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example5" href="#pane-example5" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html5" href="#pane-html5" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -496,10 +496,10 @@ permalink: "components/form-elements.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs6" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example6" href="#pane-example6" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html6" href="#pane-html6" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
