--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -16,10 +16,10 @@ permalink: "components/parallax.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
@@ -41,8 +41,7 @@ permalink: "components/parallax.html"
      <div class="parallax-bg height-400 pos-rel" style="background-image: url(/images/bg-parallax1.jpg)">
       <img src="/images/parallax1.png" class="pos-abs bottom-0 left-0" alt="parallax overlay">
 
-      <h2
-       class="h3 text-center color-white m-0 p-a-md relative-centered width-30pct relative-centered bg-alpha-50">
+      <h2 class="h3 text-center color-white m-0 p-a-md relative-centered width-30pct relative-centered bg-alpha-50">
        Scroll down</h2>
 
      </div>
