--- a/pages/sample/button.html
+++ b/pages/sample/button.html
@@ -2,7 +2,7 @@
 title: Buttons
 landing: Components
 layout: components.njk
-permalink: "components/buttons.html"
+permalink: "components/button.html"
 ---
 
 <h1 class="mt-lg-0">Button</h1>
@@ -22,10 +22,10 @@ permalink: "components/buttons.html"
 <!--TABS-->
 <div class="tab-group responsive">
  <ul id="tabs1" class="nav nav-tabs" role="tablist">
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
   </li>
-  <li class="nav-item">
+  <li class="nav-item" role="presentation">
    <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
   </li>
 
