--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -13,60 +13,62 @@ permalink: "components/horizontal-separator.html"
 
 <!--TABS-->
 <div class="tab-group responsive">
-  <ul id="tabs1" class="nav nav-tabs" role="tablist">
-    <li class="nav-item">
-      <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
-    </li>
-    <li class="nav-item">
-      <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
-    </li>
+ <ul id="tabs1" class="nav nav-tabs" role="tablist">
+  <li class="nav-item" role="presentation">
+   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item" role="presentation">
+   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
 
-  </ul>
+ </ul>
 
-  <div id="tab-content" class="tab-content">
-    <!--Examples-->
-    <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
-      <div class="card-header" id="heading-example1">
-        <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
+   <div class="card-header" id="heading-example1">
+    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
      aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
      Example
     </a>
-      </div>
-      <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
-        <div class="card-body p-b-md">
-          {% include "../../src/_includes/modules/horizontal-separator.html" %}
-        </div>
-      </div>
+   </div>
+   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
+    <div class="card-body p-b-md">
+     {% include "../../src/_includes/modules/horizontal-separator.html" %}
     </div>
+   </div>
+  </div>
 
-    <!--HTML-->
-    <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
-      <div class="card-header" id="heading-html1">
-        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
+  <!--HTML-->
+  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
+   <div class="card-header" id="heading-html1">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
      aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
      Source code
     </a>
-      </div>
-      <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
-        <div class="card-body">
-          <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/horizontal-separator.html" %}</code>
+   </div>
+   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/horizontal-separator.html" %}</code>
       </pre>
 
-        </div>
-      </div>
     </div>
-
+   </div>
   </div>
+
+ </div>
 </div>
 <!--END TABS-->
 
 <h2 id="Usage">Usage</h2>
 <h3>When and how to use it</h3>
-<p>Use the horizontal separator to divide sections of content. This breaks up long pages of text and allows visitors to process your most important message first.
+<p>Use the horizontal separator to divide sections of content. This breaks up long pages of text and allows visitors to
+ process your most important message first.
 </p>
 <h3>How not to use it</h3>
 <p>Do not use horizontal separators to build a pseudo table.</p>
-<p>Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy, consider adding headings and removing unnecessary words. </p>
+<p>Do not abuse horizontal separators and avoid separating content that belongs together. If a section is lengthy,
+ consider adding headings and removing unnecessary words. </p>
 
 <h2 id="Accessibility">Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
